refactor(infra-pipeline)：接入MinIO存储并优化集成测试清理机制
1.抽象 FileStorageRepository 屏蔽 MinIO 底层细节，修改相应的所有测试类。
2.Service 层由本地文件存储切换为云端对象存储。
3.改进测试类 AfterEach 逻辑，物理删除 MinIO 测试数据以保证零残留。