@@ -1,5 +1,7 @@
 package top.emilejones.hhu.pipeline.ProcessedDocumentTest;
 
+import io.minio.MinioClient;
+import io.minio.RemoveObjectArgs;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -9,13 +11,13 @@ import top.emilejones.hhu.domain.pipeline.ProcessedDocument;
 import top.emilejones.hhu.domain.pipeline.ProcessedDocumentType;
 import top.emilejones.hhu.pipeline.TestApplication;
 import top.emilejones.hhu.pipeline.mapper.ProcessedDocumentMapper;
+import top.emilejones.hhu.pipeline.repository.FileStorageRepository;
 import top.emilejones.hhu.pipeline.services.ProcessedDocumentService;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
@@ -25,6 +27,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * 处理后文档保存测试类
+ * 基于Minio存储系统
  * @author Yeyezhi
  */
 @SpringBootTest(classes = TestApplication.class)
@@ -34,44 +37,58 @@ public class SaveTest {
     private ProcessedDocumentService processedDocumentService;
     @Autowired
     private ProcessedDocumentMapper processedDocumentMapper;
+    @Autowired
+    private FileStorageRepository fileStorageRepository;
+    @Autowired
+    private MinioClient minioClient;
 
     private List<String> createdDocumentIds = new ArrayList<>();
-    private List<String> createdFilePaths = new ArrayList<>();
-    private String testBaseDir = "test-docs-findbyid";
+    private List<String> createdObjectNames = new ArrayList<>();
 
     @BeforeEach
     void setUp() {
         createdDocumentIds.clear();
-        createdFilePaths.clear();
-        // 创建测试目录
-        try {
-            Files.createDirectories(Paths.get(testBaseDir));
-        } catch (IOException e) {
-            throw new RuntimeException("Failed to create test directory", e);
-        }
+        createdObjectNames.clear();
     }
 
     @AfterEach
     void tearDown() {
-        // 清理测试创建的所有文档元数据
-        createdDocumentIds.forEach(id -> processedDocumentMapper.hardDelete(id));
-        createdDocumentIds.clear();
-
-        // 清理测试创建的所有文件
-        for (String filePath : createdFilePaths) {
-            try {
-                Files.deleteIfExists(Paths.get(filePath));
-            } catch (IOException e) {
-                // 忽略删除异常
-            }
+        // 1. 清理数据库元数据
+        if (!createdDocumentIds.isEmpty()) {
+            createdDocumentIds.forEach(id -> {
+                try {
+                    processedDocumentMapper.hardDelete(id);
+                } catch (Exception e) {
+                    System.err.println("清理数据库失败，ID: " + id + ", 原因: " + e.getMessage());
+                }
+            });
+            createdDocumentIds.clear();
         }
-        createdFilePaths.clear();
 
-        // 清理测试目录
-        try {
-            Files.deleteIfExists(Paths.get(testBaseDir));
-        } catch (IOException e) {
-            // 忽略删除异常
+        // 2. 真正清理 Minio 中的物理文件
+        if (!createdObjectNames.isEmpty()) {
+            for (String path : createdObjectNames) {
+                try {
+                    // 解析路径 (格式如: /bamboo/uuid.md)
+                    String cleanPath = path.startsWith("/") ? path.substring(1) : path;
+                    int slashIndex = cleanPath.indexOf("/");
+                    if (slashIndex > 0) {
+                        String bucket = cleanPath.substring(0, slashIndex);
+                        String objectKey = cleanPath.substring(slashIndex + 1);
+
+                        // 执行 Minio 删除操作
+                        minioClient.removeObject(
+                                RemoveObjectArgs.builder()
+                                        .bucket(bucket)
+                                        .object(objectKey)
+                                        .build()
+                        );
+                    }
+                } catch (Exception e) {
+                    System.err.println("清理 Minio 文件失败，路径: " + path + ", 原因: " + e.getMessage());
+                }
+            }
+            createdObjectNames.clear();
         }
     }
 
@@ -83,7 +100,7 @@ public class SaveTest {
         String documentId = UUID.randomUUID().toString();
         String sourceDocumentId = UUID.randomUUID().toString();
         String fileName = "test-document.md";
-        String filePath = testBaseDir + "/" + fileName;
+        String filePath = "/tmp/test/" + fileName; // 原始路径，仅用于记录
         String content = "# Test Markdown Document\n\nThis is a test markdown file content.";
 
         // 创建处理后文档
@@ -95,11 +112,16 @@ public class SaveTest {
                 ProcessedDocumentType.MARKDOWN
         );
 
-        // 保存文档
-        ByteArrayInputStream inputStream = new ByteArrayInputStream(content.getBytes());
-        processedDocumentService.save(processedDocument, inputStream);
+        // 预期的Minio路径
+        String expectedMinioPath = "/bamboo/" + documentId + ".md";
+
+        // 提前记录到清理列表中，确保即使save失败也能正确清理
         createdDocumentIds.add(documentId);
-        createdFilePaths.add(filePath);
+        createdObjectNames.add(expectedMinioPath);
+
+        // 保存文档
+        ByteArrayInputStream inputStream = new ByteArrayInputStream(content.getBytes(StandardCharsets.UTF_8));
+        processedDocumentService.save(processedDocument, inputStream);
 
         // 验证文档能够被成功保存
         ProcessedDocument savedDocument = processedDocumentService.findById(documentId)
@@ -107,16 +129,18 @@ public class SaveTest {
         assertNotNull(savedDocument, "保存的文档应该能够被找到");
         assertEquals(documentId, savedDocument.getId());
         assertEquals(sourceDocumentId, savedDocument.getSourceDocumentId());
-        assertEquals(filePath, savedDocument.getFilePath());
+        assertEquals(expectedMinioPath, savedDocument.getFilePath());
         assertEquals(ProcessedDocumentType.MARKDOWN, savedDocument.getProcessedDocumentType());
 
-        // 验证文件内容被正确保存
-        assertTrue(Files.exists(Paths.get(filePath)), "文件应该存在于文件系统中");
+        // 验证文件内容被正确保存到Minio
         try {
-            String savedContent = Files.readString(Paths.get(filePath));
-            assertEquals(content, savedContent, "文件内容应该与输入内容一致");
+            String savedContent;
+            try (InputStream contentStream = fileStorageRepository.open(expectedMinioPath)) {
+                savedContent = new String(contentStream.readAllBytes(), StandardCharsets.UTF_8);
+            }
+            assertEquals(content, savedContent, "Minio中的文件内容应该与输入内容一致");
         } catch (IOException e) {
-            fail("读取保存的文件失败: " + e.getMessage());
+            fail("读取Minio中的文件失败: " + e.getMessage());
         }
     }
 
@@ -128,7 +152,7 @@ public class SaveTest {
         String documentId = UUID.randomUUID().toString();
         String sourceDocumentId = UUID.randomUUID().toString();
         String fileName = "test-image.png";
-        String filePath = testBaseDir + "/" + fileName;
+        String filePath = "/tmp/test/" + fileName; // 原始路径，仅用于记录
 
         // 创建模拟的图片内容（实际上是一个简单的二进制数据）
         byte[] imageContent = new byte[]{(byte) 0x89, 0x50, 0x4E, 0x47, 0x0D, 0x0A, 0x1A, 0x0A}; // PNG文件头
@@ -142,11 +166,16 @@ public class SaveTest {
                 ProcessedDocumentType.PNG
         );
 
+        // 预期的Minio路径
+        String expectedMinioPath = "/bamboo/" + documentId + ".md";
+
+        // 提前记录到清理列表中，确保即使save失败也能正确清理
+        createdDocumentIds.add(documentId);
+        createdObjectNames.add(expectedMinioPath);
+
         // 保存文档
         ByteArrayInputStream inputStream = new ByteArrayInputStream(imageContent);
         processedDocumentService.save(processedDocument, inputStream);
-        createdDocumentIds.add(documentId);
-        createdFilePaths.add(filePath);
 
         // 验证文档能够被成功保存
         ProcessedDocument savedDocument = processedDocumentService.findById(documentId)
@@ -154,16 +183,18 @@ public class SaveTest {
         assertNotNull(savedDocument, "保存的图片文档应该能够被找到");
         assertEquals(documentId, savedDocument.getId());
         assertEquals(sourceDocumentId, savedDocument.getSourceDocumentId());
-        assertEquals(filePath, savedDocument.getFilePath());
+        assertEquals(expectedMinioPath, savedDocument.getFilePath());
         assertEquals(ProcessedDocumentType.PNG, savedDocument.getProcessedDocumentType());
 
-        // 验证文件被正确保存
-        assertTrue(Files.exists(Paths.get(filePath)), "图片文件应该存在于文件系统中");
+        // 验证文件被正确保存到Minio
         try {
-            byte[] savedContent = Files.readAllBytes(Paths.get(filePath));
-            assertArrayEquals(imageContent, savedContent, "文件内容应该与输入内容一致");
+            byte[] savedContent;
+            try (InputStream contentStream = fileStorageRepository.open(expectedMinioPath)) {
+                savedContent = contentStream.readAllBytes();
+            }
+            assertArrayEquals(imageContent, savedContent, "Minio中的文件内容应该与输入内容一致");
         } catch (IOException e) {
-            fail("读取保存的图片文件失败: " + e.getMessage());
+            fail("读取Minio中的图片文件失败: " + e.getMessage());
         }
     }
 
@@ -175,7 +206,7 @@ public class SaveTest {
         String documentId = UUID.randomUUID().toString();
         String sourceDocumentId = UUID.randomUUID().toString();
         String fileName = "test-update.md";
-        String filePath = testBaseDir + "/" + fileName;
+        String filePath = "/tmp/test/" + fileName; // 原始路径，仅用于记录
         String originalContent = "# Original Content\n\nThis is the original content.";
         String updatedContent = "# Updated Content\n\nThis is the updated content after modification.";
 
@@ -188,21 +219,29 @@ public class SaveTest {
                 ProcessedDocumentType.MARKDOWN
         );
 
-        ByteArrayInputStream originalInputStream = new ByteArrayInputStream(originalContent.getBytes());
-        processedDocumentService.save(processedDocument, originalInputStream);
+        // 预期的Minio路径
+        String expectedMinioPath = "/bamboo/" + documentId + ".md";
+
+        // 提前记录到清理列表中，确保即使save失败也能正确清理
         createdDocumentIds.add(documentId);
-        createdFilePaths.add(filePath);
+        createdObjectNames.add(expectedMinioPath);
+
+        ByteArrayInputStream originalInputStream = new ByteArrayInputStream(originalContent.getBytes(StandardCharsets.UTF_8));
+        processedDocumentService.save(processedDocument, originalInputStream);
 
         // 验证初始内容
         try {
-            String savedContent = Files.readString(Paths.get(filePath));
+            String savedContent;
+            try (InputStream contentStream = fileStorageRepository.open(expectedMinioPath)) {
+                savedContent = new String(contentStream.readAllBytes(), StandardCharsets.UTF_8);
+            }
             assertEquals(originalContent, savedContent);
         } catch (IOException e) {
-            fail("读取初始文件失败: " + e.getMessage());
+            fail("读取Minio中的初始文件失败: " + e.getMessage());
         }
 
         // 更新文档内容
-        ByteArrayInputStream updatedInputStream = new ByteArrayInputStream(updatedContent.getBytes());
+        ByteArrayInputStream updatedInputStream = new ByteArrayInputStream(updatedContent.getBytes(StandardCharsets.UTF_8));
         processedDocumentService.save(processedDocument, updatedInputStream);
 
         // 验证文档元数据没有变化
@@ -211,25 +250,28 @@ public class SaveTest {
         assertNotNull(savedDocument);
         assertEquals(documentId, savedDocument.getId());
         assertEquals(sourceDocumentId, savedDocument.getSourceDocumentId());
-        assertEquals(filePath, savedDocument.getFilePath());
+        assertEquals(expectedMinioPath, savedDocument.getFilePath());
 
-        // 验证文件内容被更新
+        // 验证Minio中的文件内容被更新
         try {
-            String savedContent = Files.readString(Paths.get(filePath));
-            assertEquals(updatedContent, savedContent, "文件内容应该被更新为新内容");
+            String savedContent;
+            try (InputStream contentStream = fileStorageRepository.open(expectedMinioPath)) {
+                savedContent = new String(contentStream.readAllBytes(), StandardCharsets.UTF_8);
+            }
+            assertEquals(updatedContent, savedContent, "Minio中的文件内容应该被更新为新内容");
         } catch (IOException e) {
-            fail("读取更新后的文件失败: " + e.getMessage());
+            fail("读取Minio中更新后的文件失败: " + e.getMessage());
         }
     }
 
     /**
-     * 测试保存到深层目录
+     * 测试保存到深层目录 (在Minio中路径平铺，没有深层目录结构)
      */
     @Test
     public void saveToNestedDirectoryTest() {
         String documentId = UUID.randomUUID().toString();
         String sourceDocumentId = UUID.randomUUID().toString();
-        String nestedPath = testBaseDir + "/nested/directory/deep/test.md";
+        String nestedPath = "/tmp/nested/directory/deep/test.md"; // 原始路径，仅用于记录
         String content = "# Nested Directory Test\n\nThis file is saved in a nested directory.";
 
         // 创建处理后文档
@@ -241,36 +283,32 @@ public class SaveTest {
                 ProcessedDocumentType.MARKDOWN
         );
 
-        // 保存文档
-        ByteArrayInputStream inputStream = new ByteArrayInputStream(content.getBytes());
-        processedDocumentService.save(processedDocument, inputStream);
-        createdDocumentIds.add(documentId);
-        createdFilePaths.add(nestedPath);
+        // 预期的Minio路径（平铺结构）
+        String expectedMinioPath = "/bamboo/" + documentId + ".md";
 
-        // 验证文档和嵌套目录都被正确创建
+        // 提前记录到清理列表中，确保即使save失败也能正确清理
+        createdDocumentIds.add(documentId);
+        createdObjectNames.add(expectedMinioPath);
+
+        // 保存文档
+        ByteArrayInputStream inputStream = new ByteArrayInputStream(content.getBytes(StandardCharsets.UTF_8));
+        processedDocumentService.save(processedDocument, inputStream);
+
+        // 验证文档被正确创建
         ProcessedDocument savedDocument = processedDocumentService.findById(documentId)
                 .orElse(null);
         assertNotNull(savedDocument);
         assertEquals(documentId, savedDocument.getId());
 
-        // 验证文件存在于嵌套目录中
-        Path filePath = Paths.get(nestedPath);
-        assertTrue(Files.exists(filePath), "文件应该存在于嵌套目录中");
-        assertTrue(Files.isDirectory(filePath.getParent()), "父目录应该存在");
-
-        // 清理嵌套目录
+        // 验证文件内容被正确保存到Minio
         try {
-            Files.walk(Paths.get(testBaseDir))
-                    .sorted((a, b) -> -a.compareTo(b))
-                    .forEach(path -> {
-                        try {
-                            Files.deleteIfExists(path);
-                        } catch (IOException e) {
-                            // 忽略删除异常
-                        }
-                    });
+            String savedContent;
+            try (InputStream contentStream = fileStorageRepository.open(expectedMinioPath)) {
+                savedContent = new String(contentStream.readAllBytes(), StandardCharsets.UTF_8);
+            }
+            assertEquals(content, savedContent, "Minio中的文件内容应该正确");
         } catch (IOException e) {
-            // 忽略删除异常
+            fail("读取Minio中的文件失败: " + e.getMessage());
         }
     }
 
@@ -282,7 +320,7 @@ public class SaveTest {
         String documentId = UUID.randomUUID().toString();
         String sourceDocumentId = UUID.randomUUID().toString();
         String fileName = "empty-document.md";
-        String filePath = testBaseDir + "/" + fileName;
+        String filePath = "/tmp/test/" + fileName; // 原始路径，仅用于记录
         byte[] emptyContent = new byte[0];
 
         // 创建处理后文档
@@ -294,11 +332,16 @@ public class SaveTest {
                 ProcessedDocumentType.MARKDOWN
         );
 
+        // 预期的Minio路径
+        String expectedMinioPath = "/bamboo/" + documentId + ".md";
+
+        // 提前记录到清理列表中，确保即使save失败也能正确清理
+        createdDocumentIds.add(documentId);
+        createdObjectNames.add(expectedMinioPath);
+
         // 保存空内容文档
         ByteArrayInputStream inputStream = new ByteArrayInputStream(emptyContent);
         processedDocumentService.save(processedDocument, inputStream);
-        createdDocumentIds.add(documentId);
-        createdFilePaths.add(filePath);
 
         // 验证文档能够被成功保存
         ProcessedDocument savedDocument = processedDocumentService.findById(documentId)
@@ -306,13 +349,15 @@ public class SaveTest {
         assertNotNull(savedDocument);
         assertEquals(documentId, savedDocument.getId());
 
-        // 验证空文件被正确创建
-        assertTrue(Files.exists(Paths.get(filePath)), "空文件应该存在于文件系统中");
+        // 验证空文件被正确保存到Minio
         try {
-            long fileSize = Files.size(Paths.get(filePath));
-            assertEquals(0, fileSize, "空文件大小应该为0");
+            byte[] savedContent;
+            try (InputStream contentStream = fileStorageRepository.open(expectedMinioPath)) {
+                savedContent = contentStream.readAllBytes();
+            }
+            assertEquals(0, savedContent.length, "Minio中的空文件大小应该为0");
         } catch (IOException e) {
-            fail("检查空文件大小失败: " + e.getMessage());
+            fail("检查Minio中的空文件失败: " + e.getMessage());
         }
     }
 
@@ -324,7 +369,7 @@ public class SaveTest {
         String documentId = UUID.randomUUID().toString();
         String sourceDocumentId = UUID.randomUUID().toString();
         String fileName = "large-document.md";
-        String filePath = testBaseDir + "/" + fileName;
+        String filePath = "/tmp/test/" + fileName; // 原始路径，仅用于记录
 
         // 创建较大的内容（约1MB）
         StringBuilder largeContent = new StringBuilder();
@@ -343,11 +388,16 @@ public class SaveTest {
                 ProcessedDocumentType.MARKDOWN
         );
 
-        // 保存大文件
-        ByteArrayInputStream inputStream = new ByteArrayInputStream(largeContent.toString().getBytes());
-        processedDocumentService.save(processedDocument, inputStream);
+        // 预期的Minio路径
+        String expectedMinioPath = "/bamboo/" + documentId + ".md";
+
+        // 提前记录到清理列表中，确保即使save失败也能正确清理
         createdDocumentIds.add(documentId);
-        createdFilePaths.add(filePath);
+        createdObjectNames.add(expectedMinioPath);
+
+        // 保存大文件
+        ByteArrayInputStream inputStream = new ByteArrayInputStream(largeContent.toString().getBytes(StandardCharsets.UTF_8));
+        processedDocumentService.save(processedDocument, inputStream);
 
         // 验证文档能够被成功保存
         ProcessedDocument savedDocument = processedDocumentService.findById(documentId)
@@ -355,16 +405,18 @@ public class SaveTest {
         assertNotNull(savedDocument);
         assertEquals(documentId, savedDocument.getId());
 
-        // 验证大文件被正确保存
-        assertTrue(Files.exists(Paths.get(filePath)), "大文件应该存在于文件系统中");
+        // 验证大文件被正确保存到Minio
         try {
-            long fileSize = Files.size(Paths.get(filePath));
-            assertTrue(fileSize > 1024 * 100, "文件大小应该大于100KB");
+            byte[] savedContentBytes;
+            try (InputStream contentStream = fileStorageRepository.open(expectedMinioPath)) {
+                savedContentBytes = contentStream.readAllBytes();
+            }
+            assertTrue(savedContentBytes.length > 1024 * 100, "Minio中的文件大小应该大于100KB");
 
-            String savedContent = Files.readString(Paths.get(filePath));
-            assertEquals(largeContent.toString(), savedContent, "大文件内容应该完整保存");
+            String savedContent = new String(savedContentBytes, StandardCharsets.UTF_8);
+            assertEquals(largeContent.toString(), savedContent, "Minio中的大文件内容应该完整保存");
         } catch (IOException e) {
-            fail("读取大文件失败: " + e.getMessage());
+            fail("读取Minio中的大文件失败: " + e.getMessage());
         }
     }
 }
